--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "WP-JS-Hooks",
-  "props": "Carl Danley & 10up",
-  "version": "0.2.0",
+  "author": "Carl Danley & 10up",
+  "version": "1.0.0",
   "devDependencies": {
     "grunt": "~1.0.1",
     "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-nodeunit": "~1.0.0",
-    "grunt-contrib-qunit": "~1.3.0",
-    "grunt-contrib-uglify": "~2.1.0"
+    "grunt-contrib-qunit": "~2.0.0",
+    "grunt-contrib-uglify": "~3.1.0"
   }
 }
